# worldmonitor-clone-20260228

./: .gitignore  .markdownlint-cli2.jsonc  CHANGELOG.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  playwright.config.ts  settings.html  vite.config.ts
.github/workflows/: build-desktop.yml  lint.yml
api/: _cors.js  _summarize-handler.js  _summarize-handler.test.mjs  acled.js  arxiv.js  classify-event.js  cloudflare-outages.js  debug-env.js  download.js  finnhub.js  fred-data.js  groq-summarize.js  hackernews.js  og-story.js  ollama-summarize.js  openrouter-summarize.js  opensky.js  risk-scores.js  rss-proxy.js  service-status.js  theater-posture.js  version.js
api/wingbits/: [[...path]].js
docs/: DESKTOP_CONFIGURATION.md
e2e/: keyword-spike-flow.spec.ts  map-harness.spec.ts  runtime-fetch.spec.ts
scripts/: desktop-package.mjs  download-node.sh
src/: App.ts  main.ts  settings-main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/sidecar/: local-api-server.mjs
src-tauri/src/: main.rs
src/app/: data-loader.ts  desktop-updater.ts  panel-layout.ts
src/components/: CIIPanel.ts  CascadePanel.ts  ClimateAnomalyPanel.ts  CountryBriefPage.ts  CountryIntelModal.ts  CountryTimeline.ts  DeckGLMap.ts  DisplacementPanel.ts  DownloadBanner.ts  ETFFlowsPanel.ts  EconomicPanel.ts  GeoHubsPanel.ts  InsightsPanel.ts  IntelligenceGapBadge.ts  InvestmentsPanel.ts  LanguageSelector.ts  LiveNewsPanel.ts  MacroSignalsPanel.ts  Map.ts  MapContainer.ts  MapPopup.ts  MonitorPanel.ts  NewsPanel.ts  Panel.ts  PizzIntIndicator.ts  PredictionPanel.ts  (+17 more)
(+49 files in other folders)
